--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -14,8 +14,8 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Hind:400,600' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="css/main.css">        
-        <script src="js/vendor/modernizr-2.6.1.min.js"></script>
+        <link rel="stylesheet" href="<%= @baseurl %>css/main.css">        
+        <script src="<%= @baseurl %>js/vendor/modernizr-2.6.1.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -34,8 +34,8 @@
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.0.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <script src="<%= @baseurl %>js/plugins.js"></script>
+        <script src="<%= @baseurl %>js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
