--- a/source/standards.html.erb
+++ b/source/standards.html.erb
@@ -6,7 +6,12 @@ title: Standards
 </div>
 
 <article>
-    
+    <section class="introduction">
+        <h2>Introduction</h2>
+        <div>
+            <%= partial "introduction" %>
+        </div>
+    </section>
     <% data.standards.content.each do |s| %>
     <section>
         <% if s.heading %> 
