--- a/source/_header.erb
+++ b/source/_header.erb
@@ -4,8 +4,8 @@
     </div>
     
     <ul>
-        <li><a href="<%= @baseurl %>">Home</a></li>
-        <li><a href="<%= @baseurl %>standards">Standards</a></li>
+        <li><a href="<%= @baseurl %>/">Home</a></li>
+        <li><a href="<%= @baseurl %>/standards">Standards</a></li>
         <li><a href="https://groups.google.com/forum/#!forum/lobbying-transparency" rel="external">Discussion Forum</a></li>
     </ul>
 </nav>
