--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,13 +1,12 @@
 ---
 title: International standards for lobbying regulation
-attribution: <a rel="nofollow" href="https://www.flickr.com/photos/greensefa/14131353244">Photo</a> by greensefa / <a rel="nofollow" href="http://creativecommons.org/licenses/by/2.0/">CC BY</a>
 ---
 
 <div class="hero">
     <article>
         <div>
             <%= partial "header" %>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.</p>
+            <p>The International Standards for Lobbying Regulation are the result of two years of collaborative work with civil society led by <strong>Transparency International</strong>, <strong>Access Info Europe</strong>, <strong>Sunlight Foundation</strong>, <strong>ALTER-EU</strong> and <strong>Open Knowledge</strong>. This initiative is unique in that it draws on the experience of a broad coalition of civil society organisations active in the field of lobbying transparency and open governance, and go further than existing regulations and standards. The Standards aim at providing clear guidance to policymakers, governments and international organisations that are thinking of or are in the process of enacting lobbying legislation. They also serve as a reference point for civil society organisations to campaign in their countries to ensure that efforts to regulate lobbying are robust, comprehensive and effective.</p>
             <a href="standards">Read the standards</a> &nbsp; <a href="https://groups.google.com/forum/#!forum/lobbying-transparency" rel="external">Join the discussion</a>
         </div>
     </article>
