--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -26,9 +26,19 @@
         
         <div class="site-footer">
             <footer>
-                <% if current_page.data.attribution %>
-                    <%= current_page.data.attribution %>
-                <% end %>
+                <ul class="logos">
+                    <li><img src="/img/logos/open-knowledge.png" alt="Open Knowledge"></li>
+                    <li><img src="/img/logos/transparency-international.png" alt="Transparency International"></li>
+                    <li><img src="/img/logos/sunlight.png" alt="Sunlight Foundation"></li>
+                    <li><img src="/img/logos/access-info.png" alt="Access Info"></li>
+                    <li><img src="/img/logos/alter.png" alt="Alter EU"></li>
+                    <li class="eu">
+                        <img src="/img/logos/eu.png" alt="EU">
+                        <span>
+                            With the financial support of the Prevention of and Fight against Crime Programme European Commission - Directorate-General Home Affairs
+                        </span>
+                    </li>
+                </ul>
             </footer>
         </div>
 
