--- a/source/css/main.css.scss
+++ b/source/css/main.css.scss
@@ -497,13 +497,43 @@ html.index {
     color: #fff;
     
     & > footer {
-        padding: $base-spacing;
+        padding: $base-spacing $base-spacing $base-spacing / 2 $base-spacing;
         @include outer-container;
         font-size: rem(12);
         
         a {
             color: inherit;
             font-weight: bold;
+        }
+        
+        .logos {
+            li {
+                padding: 0 0 $base-spacing / 2 0;
+                @media (min-width: $medium-screen) {
+                    display: inline-block;
+                    margin-right: $small-spacing;
+                    vertical-align: middle;
+                }
+                img {
+                    height: 36px;
+                }
+                
+                &.eu {
+                    padding-top: 2px;
+                    
+                    img {
+                        height: 30px;
+                        float: left;
+                        margin-right: 10px;
+                    }
+                    span {
+                        display: inline-block;
+                        max-width: 365px;
+                        line-height: 1.2;
+                        padding-top: 2px;
+                    }
+                }
+            }
         }
     }  
 }
