--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -27,13 +27,13 @@
         <div class="site-footer">
             <footer>
                 <ul class="logos">
-                    <li><img src="/img/logos/open-knowledge.png" alt="Open Knowledge"></li>
-                    <li><img src="/img/logos/transparency-international.png" alt="Transparency International"></li>
-                    <li><img src="/img/logos/sunlight.png" alt="Sunlight Foundation"></li>
-                    <li><img src="/img/logos/access-info.png" alt="Access Info"></li>
-                    <li><img src="/img/logos/alter.png" alt="Alter EU"></li>
+                    <li><img src="<%= @baseurl %>/img/logos/open-knowledge.png" alt="Open Knowledge"></li>
+                    <li><img src="<%= @baseurl %>/img/logos/transparency-international.png" alt="Transparency International"></li>
+                    <li><img src="<%= @baseurl %>/img/logos/sunlight.png" alt="Sunlight Foundation"></li>
+                    <li><img src="<%= @baseurl %>/img/logos/access-info.png" alt="Access Info"></li>
+                    <li><img src="<%= @baseurl %>/img/logos/alter.png" alt="Alter EU"></li>
                     <li class="eu">
-                        <img src="/img/logos/eu.png" alt="EU">
+                        <img src="<%= @baseurl %>/img/logos/eu.png" alt="EU">
                         <span>
                             With the financial support of the Prevention of and Fight against Crime Programme European Commission - Directorate-General Home Affairs
                         </span>
