--- a/source/standards/integrity.html.erb
+++ b/source/standards/integrity.html.erb
@@ -9,5 +9,6 @@ title: Standards - Integrity
     <% data.integrity.content.each do |sec| %>
         <%= partial(:standard_section, :locals => { :s => sec }) %>
     <% end %>
-    <a href="<%= @baseurl %>/standards/participation-access" class="next">Next: Participation and Access</a>
+    <a href="<%= @baseurl %>/standards/transparency" class="previous"><span>Previous:</span> Transparency</a>
+    <a href="<%= @baseurl %>/standards/participation-access" class="next"><span>Next:</span> Participation and Access</a>
 </article>
