--- a/source/standards/introduction.html.erb
+++ b/source/standards/introduction.html.erb
@@ -12,5 +12,5 @@ title: Standards - Introduction
             <%= partial "introduction" %>
         </div>
     </section>
-    <a href="<%= @baseurl %>/standards/guiding-principles" class="next">Next: Guiding Principles</a>
+    <a href="<%= @baseurl %>/standards/guiding-principles" class="next"><span>Next:</span> Guiding Principles</a>
 </article>
