--- a/source/standards/regulatory-framework.html.erb
+++ b/source/standards/regulatory-framework.html.erb
@@ -9,4 +9,5 @@ title: Standards - Regulatory Framework Design
     <% data.framework.content.each do |sec| %>
         <%= partial(:standard_section, :locals => { :s => sec }) %>
     <% end %>
+    <a href="<%= @baseurl %>/standards/oversight-management-sanctions" class="previous"><span>Previous:</span> Oversight, Management and Sanctions</a>
 </article>
