--- a/source/standards/regulatory-scope.html.erb
+++ b/source/standards/regulatory-scope.html.erb
@@ -9,5 +9,6 @@ title: Standards - Regulatory Scope
     <% data.regulatory_scope.content.each do |sec| %>
         <%= partial(:standard_section, :locals => { :s => sec }) %>
     <% end %>
-    <a href="<%= @baseurl %>/standards/transparency" class="next">Next: Transparency</a>
+    <a href="<%= @baseurl %>/standards/guiding-principles" class="previous"><span>Previous:</span> Guiding Principles</a>
+    <a href="<%= @baseurl %>/standards/transparency" class="next"><span>Next:</span> Transparency</a>
 </article>
