--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,5 +1,6 @@
 ---
 title: International standards for lobbying regulation
+attribution: '&copy; Cover photo: Transparency International Lithuania'
 ---
 
 <div class="hero">
