--- a/source/standards/index.html.erb
+++ b/source/standards/index.html.erb
@@ -1,5 +1,6 @@
 ---
 title: Standards
+attribution: '&copy; Cover photo: Transparency International Lithuania'
 ---
 <div class="page-header">
     <%= partial "header" %>
