--- a/source/_header.erb
+++ b/source/_header.erb
@@ -7,6 +7,7 @@
         <li><a href="<%= @baseurl %>/">Home</a></li>
         <li><a href="<%= @baseurl %>/standards">Standards</a></li>
         <li><a href="https://groups.google.com/forum/#!forum/lobbying-transparency" rel="external">Discussion Forum</a></li>
+        <li><a href="<%= @baseurl %>/lobbyingtransparency.pdf" rel="external">Print Version</a></li>
     </ul>
 </nav>
 
