make legible in IE8

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -16,6 +16,9 @@
         <link href='http://fonts.googleapis.com/css?family=Hind:400,600' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="<%= @baseurl %>/css/main.css">        
         <script src="<%= @baseurl %>/js/vendor/modernizr-2.6.1.min.js"></script>
+        <!--[if lt IE 9]>
+        <link rel="stylesheet" href="<%= @baseurl %>/css/ie.css">
+        <![endif]-->
     </head>
     <body>
         <!--[if lt IE 7]>
