--- a/source/_header.erb
+++ b/source/_header.erb
@@ -7,7 +7,8 @@
         <li><a href="<%= @baseurl %>/">Home</a></li>
         <li><a href="<%= @baseurl %>/standards">Standards</a></li>
         <li><a href="https://groups.google.com/forum/#!forum/lobbying-transparency" rel="external">Discussion Forum</a></li>
-        <li><a href="<%= @baseurl %>/lobbyingtransparency.pdf" rel="external">Print Version</a></li>
+        <li><a href="<%= @baseurl %>/lobbyingtransparency.pdf" rel="external">Print Version (EN)</a></li>
+        <li><a href="<%= @baseurl %>/International_Standards_for_Lobbying_Regulation_ES.pdf" rel="external">Versión para imprimir (ES)</a></li>
     </ul>
 </nav>
 
