--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,7 +8,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <!-- Use title if it's in the page YAML frontmatter -->
         <title><%= current_page.data.title || "International Standards for Lobbying Regulation" %></title>
-        <meta name="description" content="The International Standards for Lobbying Regulation are the result of two years of collaborative work with civil society led by Transparency International, Access Info Europe, Sunlight Foundation and Open Knowledge. This initiative is unique in that it draws on the experience of a broad coalition of civil society organisations active in the field of lobbying transparency and open governance, and goes further than existing regulations and standards. The Standards aim at providing clear guidance to policymakers, governments and international organisations that are thinking of or are in the process of enacting lobbying legislation. They also serve as a reference point for civil society organisations to campaign in their countries to ensure that efforts to regulate lobbying are robust, comprehensive and effective.">
+        <meta name="description" content="The International Standards for Lobbying Regulation are the result of two years of collaborative work with civil society led by Transparency International, Access Info Europe, Sunlight Foundation and Open Knowledge International. This initiative is unique in that it draws on the experience of a broad coalition of civil society organisations active in the field of lobbying transparency and open governance, and goes further than existing regulations and standards. The Standards aim at providing clear guidance to policymakers, governments and international organisations that are thinking of or are in the process of enacting lobbying legislation. They also serve as a reference point for civil society organisations to campaign in their countries to ensure that efforts to regulate lobbying are robust, comprehensive and effective.">
         <meta name="viewport" content="width=device-width">
         
         <meta property="og:title" content="<%= current_page.data.title || "International Standards for Lobbying Regulation" %>" />
@@ -34,7 +34,7 @@
         <div class="site-footer">
             <footer>
                 <ul class="logos">
-                    <li><img src="<%= @baseurl %>/img/logos/open-knowledge.png" alt="Open Knowledge"></li>
+                    <li><img src="<%= @baseurl %>/img/logos/oki-landscape-logo-white.png" alt="Open Knowledge International"></li>
                     <li><img src="<%= @baseurl %>/img/logos/transparency-international.png" alt="Transparency International"></li>
                     <li><img src="<%= @baseurl %>/img/logos/sunlight.png" alt="Sunlight Foundation"></li>
                     <li><img src="<%= @baseurl %>/img/logos/access-info.png" alt="Access Info"></li>
