oki logo in footer

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -34,7 +34,7 @@
         <div class="site-footer">
             <footer>
                 <ul class="logos">
-                    <li><img src="<%= @baseurl %>/img/logos/open-knowledge.png" alt="Open Knowledge"></li>
+                    <li><img src="<%= @baseurl %>/img/logos/oki.png" alt="Open Knowledge"></li>
                     <li><img src="<%= @baseurl %>/img/logos/transparency-international.png" alt="Transparency International"></li>
                     <li><img src="<%= @baseurl %>/img/logos/sunlight.png" alt="Sunlight Foundation"></li>
                     <li><img src="<%= @baseurl %>/img/logos/access-info.png" alt="Access Info"></li>
